# floem-shadcn

./: .gitignore  Cargo.toml  README.md  justfile
docs/reports/: broken.md
examples/: combobox_test.rs  showcase.rs  showcase.rs.bak
src/: lib.rs  styled.rs  theme.rs
src/components/: accordion.rs  alert.rs  alert_dialog.rs  aspect_ratio.rs  avatar.rs  badge.rs  breadcrumb.rs  button.rs  button_group.rs  calendar.rs  card.rs  carousel.rs  checkbox.rs  collapsible.rs  combobox.rs  command.rs  context_menu.rs  date_picker.rs  dialog.rs  drawer.rs  dropdown_menu.rs  empty.rs  hover_card.rs  input.rs  input_group.rs  input_otp.rs  item.rs  kbd.rs  label.rs  menubar.rs  mod.rs  navigation_menu.rs  pagination.rs  popover.rs  progress.rs  radio_group.rs  resizable.rs  scroll_area.rs  select.rs  separator.rs  (+14 more)
src/text/: document.rs  keymap.rs  style_utils.rs  text_area.rs  text_input.rs  text_layout_lines.rs
tests/: button.rs  button_group.rs  dialog.rs  empty.rs  input_group.rs  item.rs  kbd.rs  select.rs  sidebar_style_cache.rs  slider.rs  spinner.rs  tabs.rs  typography.rs
