[package]
name = "floem-shadcn"
version = "0.1.0"
edition = "2024"
rust-version = "1.87"
description = "shadcn/ui inspired components for Floem"
license = "MIT"

[dependencies]

floem = { git = "https://github.com/lapce/floem", rev = "ae651b10", features = ["editor"] }
floem-tailwind = { git = "https://github.com/elcoosp/floem-tailwind" }
floem-editor-core = { version = "0.2"}
peniko = "0.5"
lapce-xi-rope = "0.4"
ui-events = { version = "0.2", features = ["kurbo"] }

[dev-dependencies]
floem-test = { git = "https://github.com/lapce/floem" }
dpi = "0.1"

[[example]]
name = "showcase"
path = "examples/showcase.rs"
